tests/testerina-integration-test/src/test/resources/command-outputs/unix/TestReportTest-testWarningForReportTools.txt
Compiling source
	testerina_report/foo:0.0.0
WARNING [main.bal:(36:5,36:19)] unused variable 'b' (BCE20403)
   |
36 |     int b = a + 1;
   |     ^^^^^^^^^^^^^^


Running Tests with Coverage

	foo

testMain: has failed.


		Test execution time :*****ms

		[pass] testFunc

		[fail] testMain:

		    error {ballerina/test:0}TestError ("Failed!")
				callableName: createBallerinaError moduleName: ballerina.test.0 fileName: assert.bal lineNumber: 41
				callableName: assertTrue moduleName: ballerina.test.0 fileName: assert.bal lineNumber: 61
				callableName: testMain moduleName: testerina_report.foo$test.0.tests.main_test fileName: tests/main_test.bal lineNumber: 24
				callableName: testMain$lambda0$ moduleName: testerina_report.foo$test.0.tests.test_execute-generated_*****lineNumber: 4
			


		1 passing
		1 failing
		1 skipped

	foo.bar.tests

		Test execution time :*****ms

		[pass] testBarAdd


		1 passing
		0 failing
		0 skipped

	foo.math

		Test execution time :*****ms

		[pass] testFunction1
		[pass] testFunction2


		2 passing
		0 failing
		0 skipped

Generating Test Report*****project-based-tests/test-report-tests/target/report/test_results.json

warning: Could not find the required HTML report tools for code coverage at <ballerina.home>/lib/tools/coverage/report.zip
error: there are test failures